--- a/dualite_transnumerique/fenetre.ui
+++ b/dualite_transnumerique/fenetre.ui
@@ -38,6 +38,13 @@
         </widget>
        </item>
        <item>
+        <widget class="QRadioButton" name="fichierAleatoire300k">
+         <property name="text">
+          <string>Aléatoire 300K (fixe)</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="QRadioButton" name="fichierAleatoire1m">
          <property name="text">
           <string>Aléatoire 1M (fixe)</string>
@@ -82,6 +89,19 @@
        <set>Qt::AlignCenter</set>
       </property>
       <layout class="QGridLayout" name="gridLayout_2">
+       <item row="0" column="1">
+        <widget class="QSpinBox" name="secteurBaseMin">
+         <property name="minimum">
+          <number>1</number>
+         </property>
+         <property name="maximum">
+          <number>1000000</number>
+         </property>
+         <property name="value">
+          <number>99001</number>
+         </property>
+        </widget>
+       </item>
        <item row="0" column="0">
         <widget class="QLabel" name="label">
          <property name="text">
@@ -93,19 +113,6 @@
         <widget class="QLabel" name="label_2">
          <property name="text">
           <string>à:</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="1">
-        <widget class="QSpinBox" name="secteurBaseMin">
-         <property name="minimum">
-          <number>1</number>
-         </property>
-         <property name="maximum">
-          <number>1000000</number>
-         </property>
-         <property name="value">
-          <number>99001</number>
          </property>
         </widget>
        </item>
@@ -121,6 +128,19 @@
           <number>100000</number>
          </property>
         </widget>
+       </item>
+       <item row="2" column="1">
+        <spacer name="verticalSpacer_2">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
        </item>
       </layout>
      </widget>
@@ -138,6 +158,19 @@
         <widget class="QLabel" name="label_3">
          <property name="text">
           <string>de:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <widget class="QSpinBox" name="comparoMin">
+         <property name="minimum">
+          <number>1</number>
+         </property>
+         <property name="maximum">
+          <number>399</number>
+         </property>
+         <property name="value">
+          <number>101</number>
          </property>
         </widget>
        </item>
@@ -161,18 +194,18 @@
          </property>
         </widget>
        </item>
-       <item row="0" column="1">
-        <widget class="QSpinBox" name="comparoMin">
-         <property name="minimum">
-          <number>1</number>
+       <item row="2" column="1">
+        <spacer name="verticalSpacer_3">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
          </property>
-         <property name="maximum">
-          <number>399</number>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
          </property>
-         <property name="value">
-          <number>101</number>
-         </property>
-        </widget>
+        </spacer>
        </item>
       </layout>
      </widget>
@@ -186,23 +219,6 @@
        <set>Qt::AlignCenter</set>
       </property>
       <layout class="QGridLayout" name="gridLayout_4">
-       <item row="0" column="0">
-        <widget class="QRadioButton" name="pasBase">
-         <property name="text">
-          <string>Base</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="0">
-        <widget class="QRadioButton" name="pasComparos">
-         <property name="text">
-          <string>Comparos</string>
-         </property>
-         <property name="checked">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
        <item row="0" column="1">
         <widget class="QSpinBox" name="pasBaseValeur">
          <property name="enabled">
@@ -222,6 +238,16 @@
          </property>
         </widget>
        </item>
+       <item row="1" column="0">
+        <widget class="QRadioButton" name="pasComparos">
+         <property name="text">
+          <string>Comparos</string>
+         </property>
+         <property name="checked">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
        <item row="1" column="1">
         <widget class="QSpinBox" name="pasComparosValeur">
          <property name="readOnly">
@@ -235,6 +261,13 @@
          </property>
          <property name="value">
           <number>300</number>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="0">
+        <widget class="QRadioButton" name="pasBase">
+         <property name="text">
+          <string>Base</string>
          </property>
         </widget>
        </item>
@@ -257,6 +290,46 @@
        <set>Qt::AlignCenter</set>
       </property>
       <layout class="QGridLayout" name="gridLayout_8">
+       <item row="1" column="2">
+        <widget class="QSpinBox" name="formuleDelta3">
+         <property name="minimum">
+          <number>3</number>
+         </property>
+         <property name="maximum">
+          <number>9</number>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="3">
+        <widget class="QLabel" name="label_8">
+         <property name="text">
+          <string>Signe référent</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignHCenter|Qt::AlignTop</set>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="1">
+        <widget class="QLabel" name="label_7">
+         <property name="text">
+          <string>Trinôme</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignHCenter|Qt::AlignTop</set>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0">
+        <widget class="QSpinBox" name="formuleDelta1">
+         <property name="minimum">
+          <number>1</number>
+         </property>
+         <property name="maximum">
+          <number>9</number>
+         </property>
+        </widget>
+       </item>
        <item row="1" column="3">
         <widget class="QSpinBox" name="formuleDelta4">
          <property name="minimum">
@@ -280,45 +353,18 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="2">
-        <widget class="QSpinBox" name="formuleDelta3">
-         <property name="minimum">
-          <number>3</number>
+       <item row="3" column="1">
+        <spacer name="verticalSpacer_4">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
          </property>
-         <property name="maximum">
-          <number>9</number>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
          </property>
-        </widget>
-       </item>
-       <item row="1" column="0">
-        <widget class="QSpinBox" name="formuleDelta1">
-         <property name="minimum">
-          <number>1</number>
-         </property>
-         <property name="maximum">
-          <number>9</number>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="1">
-        <widget class="QLabel" name="label_7">
-         <property name="text">
-          <string>Trinôme</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignHCenter|Qt::AlignTop</set>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="3">
-        <widget class="QLabel" name="label_8">
-         <property name="text">
-          <string>Signe référent</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignHCenter|Qt::AlignTop</set>
-         </property>
-        </widget>
+        </spacer>
        </item>
       </layout>
      </widget>
